--- a/lang/es.json
+++ b/lang/es.json
@@ -70,6 +70,7 @@
     "If you do not have an account, you may create one by clicking the button below. After creating an account, you may click the invitation acceptance button in this email to accept the team invitation:": "Si no tiene una cuenta, puede crear una haciendo clic en el botón de abajo. Después de crear una cuenta, puede hacer clic en el botón de aceptación de la invitación en este correo electrónico para aceptar la invitación del equipo:",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si está teniendo problemas al hacer clic en el botón \":actionText\", copie y pegue la URL de abajo\nen su navegador web:",
     "Invoice": "Factura",
+    "Invoices": "Facturas",
     "Last active": "Activo por última vez",
     "Last used": "Usado por última vez",
     "Leave": "Abandonar",
